136		Add some bits to province history
137		Clean up CK2 classes
138		Add missing bits to constructors
139		Initial culture conversion for provinces
140		Refactor EU3 classes
141		Update culture conversion to allow distinguishers
142		ROTW cultures
143		Province capital names from EU3 data. Also, much more province history is output.
144		Add a few new cultures to converter mod. Also update mod culture mappings
145		Updates to culture mappings and mod after some testing
146		Update converter mod to make easy for mod directory use
147		Initial religion conversion
148		Religions for ROTW provinces
149		Heresy modifier for heretic religions (only if ruler's religion different)
150		Simplify the heretic modifier
151		Update 'religion' culture distinguisher rules to include heretics
152		Population conversion
153		HelloGoodSir's recommendation about Saxon culture mapping to Scottish
154		Manpower conversion
155		Trade goods
156		Base Tax conversion
157		Fix traits bug
158		Use population proxy to determine culture and religion where needed
159		Proxy multiplier for capitals
160		Fix to make proxy multiplier work
161		Allow manpower, basetax, and population to be converted to historical values (configuration option)
162		Output name comes from input name if it's specified (works on drag-n-drops, too)
163		Fix parser bug (in setRHSObjList())
164		Add blended option for population conversion
165		Fix unmapped provinces error
166		Modified build.bat to use 7zip instead of IZARC
167		Modified build.bat to use 7zip instead of IZARC
168		Merge
169		Use basetax and manpower proxies to try to break ties in culture conversion
170		Merge
171		Update test batch files to use 7-zip
172		Prepare converter mod for first releaseable version
173		Create and use CK2Building class
174		Baronies no longer get wrong religion buildings
175		Can set EU3 options via configuration.txt
176		Make a bunch of province conversion things configurable
177		Don't bother mapping wastelands to wastelands