@@ -3,6 +3,7 @@
 
 
 
+#include "..\Mappers.h"
 #include <string>
 #include <vector>
 #include <map>
@@ -45,7 +46,7 @@ class CK2BuildingFactory
 		CK2BuildingFactory();
 		
 		void						addBuildingTypes(Object* obj);
-		const CK2Building*	getBuilding(string type, const CK2Character* baronyHolder) const;
+		const CK2Building*	getBuilding(string type, const CK2Character* baronyHolder, const religionGroupMapping& religionGroupMap) const;
 
 	private:
 		map<string, const CK2Building*> buildings;
